--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Тест на вибір місця для вечері</title>
   <link rel="stylesheet" href="/Css/style.css">
+  <script src="/js/react_prj.js"></script>
+
 </head>
 <body>
   <h1>Тест на вибір місця для вечері</h1>
